<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016, Imagination Technologies Limited and/or its affiliated group companies
  ~ and/or licensors
  ~
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without modification, are permitted
  ~ provided that the following conditions are met:
  ~
  ~ 1. Redistributions of source code must retain the above copyright notice, this list of conditions
  ~     and the following disclaimer.
  ~
  ~ 2. Redistributions in binary form must reproduce the above copyright notice, this list of
  ~     conditions and the following disclaimer in the documentation and/or other materials provided
  ~     with the distribution.
  ~
  ~ 3. Neither the name of the copyright holder nor the names of its contributors may be used to
  ~     endorse or promote products derived from this software without specific prior written
  ~     permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR
  ~ IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND
  ~ FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
  ~ CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
  ~ DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
  ~ DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
  ~ WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY
  ~ WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  ~
  -->


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/HobbyistFragmentStyle"
    >

    <TextView
        android:id="@+id/deviceDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:gravity="left"
        android:text="@string/device_details"
        android:textSize="@dimen/small_label_text_size"
        android:layout_marginBottom="20dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/deviceDetails"
        >

        <TextView
            android:id="@+id/macText"
            style="@style/DeviceDetailValue"
            android:text="@string/mac"
            />

        <TextView
            android:id="@+id/macValue"
            style="@style/DeviceDetailText"
            android:layout_toRightOf="@id/macText"
            />

        <TextView
            android:id="@+id/serialNumberText"
            style="@style/DeviceDetailValue"
            android:text="@string/serial_number_abbreviation"
            android:layout_below="@+id/macText"
            />

        <TextView
            android:id="@+id/serialNumberValue"
            style="@style/DeviceDetailText"
            android:layout_below="@+id/macText"
            android:layout_toRightOf="@id/serialNumberText"
            />

        <TextView
            android:id="@+id/deviceTypeText"
            style="@style/DeviceDetailValue"
            android:text="@string/device_type"
            android:layout_below="@+id/serialNumberText"
            />

        <TextView
            android:id="@+id/deviceTypeValue"
            style="@style/DeviceDetailText"
            android:layout_below="@+id/serialNumberText"
            android:layout_toRightOf="@id/deviceTypeText"
            />

        <TextView
            android:id="@+id/softwareVersionText"
            style="@style/DeviceDetailValue"
            android:text="@string/software_version"
            android:layout_below="@+id/deviceTypeText"
            />

        <TextView
            android:id="@+id/softwareVersionValue"
            style="@style/DeviceDetailText"
            android:layout_below="@+id/deviceTypeText"
            android:layout_toRightOf="@id/softwareVersionText"
            />

        <TextView
            android:id="@+id/nameText"
            style="@style/DeviceDetailValue"
            android:text="@string/name"
            android:layout_below="@+id/softwareVersionText"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/nameValue"
            style="@style/DeviceDetailText"
            android:layout_below="@+id/softwareVersionText"
            android:layout_toRightOf="@id/nameText"
            />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyle"
        android:indeterminate="true"
        android:layout_centerInParent="true"
        />
</RelativeLayout>
